--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -55,20 +55,7 @@
       </div>
     </main>
 
-    <footer class="blog-footer">
-      <div class="row column">
-        <p>
-          {{ if .Site.Copyright }}
-          {{ .Site.Copyright | markdownify }}
-          {{ else }}
-          Blog template created by <a href="hhttps://github.com/zurb">@zurb</a>, ported to Hugo by <a href='https://github.com/htkoca'>github.com/htko89</a>.
-          {{ end }}
-        </p>
-        <p>
-          <a href="{{ .Permalink }}#">{{ i18n "backToTop" }}</a>
-        </p>
-      </div>
-    </footer>
+    {{ partial "site-footer.html" . }}
 
   <foot>
 
