--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -11,7 +11,7 @@
       <small>
         <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
           {{ .Date.Format $dateFormat }}
-        </time> by {{ .Params.author | default .Site.Params.author }}.
+        </time>
         {{ if (.Params.categories) }}Categories: {{ partial "meta-categories.html" . }}.{{ end }}
         {{ if (.Params.tags) }}Tags: {{ partial "meta-tags.html" . }}.{{ end }}
         <br>
