--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -13,7 +13,7 @@
                     <li class="{{ if .IsHome }}active{{ end }}">
                         <a href="{{ .Site.BaseURL | absLangURL }}">{{ i18n "home" }}</a>
                     </li>
-                    
+                    <!--
                     <li>
                         <a href="/projects">Projects</a>
                         <ul class="menu">
@@ -49,13 +49,10 @@
                     </li>
                     
                     <li><a href="/resources">Resources</a></li>
-                    
-                    {{ if .Site.Params.custom_navbar }}
-                        {{ range .Site.Menus.navbar }}
-                            <li>
-                                <a href="{{.URL | absURL }}">{{ .Name }}</a>
-                            </li>
-                        {{ end }}
+                    -->
+					
+					{{ if .Site.Params.UseCustomNavigation }}
+						{{ partial "navigation.html" .Site.Menus.navigation }}
                     {{ else }}
                         {{ range where .Site.Pages "Type" "!=" "post" }}
                             <li>
