--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,5 +1,28 @@
 {{ $dateFormat := default "Mon Jan 2, 2006" (index .Site.Params "date_format") }}
 
+<div class="card blog-post">
+  <div class="card-divider">
+    <h3>
+      <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
+    </h3>
+  </div>
+  
+  <div class="card-section">
+    <img src="img/post/{{ .Params.Image }}" class="float-right">
+    <p>{{ .Summary }}</p>
+  </div>
+  <div class="card-section">
+    <small>
+        <time datetime="{{ .Date.Format "2006-01-02T15:04:05Z07:00" }}">
+          {{ .Date.Format $dateFormat }}
+        </time>
+        {{ if (.Params.categories) or (.Params.tags) }} - {{ end }}
+        {{ if (.Params.categories) }}Categories: {{ partial "meta-categories.html" . }}{{ end }}
+        {{ if (.Params.tags) }}Tags: {{ partial "meta-tags.html" . }}{{ end }}
+      </small>
+  </div>
+</div>
+<!--
 <div class="blog-post">
   <h3>
     <a href="{{ .Permalink }}">{{ .Title | markdownify }}</a>
@@ -19,3 +42,4 @@
   <a href='{{ .Permalink }}'>{{ i18n "readMore" }}</a>
   <hr>
 </div>
+-->
