--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -27,8 +27,9 @@
   </head>
   <body>
 
-    {{ partial "header.html" . }}
+    {{ partial "header2.html" . }}
 
+    {{ if eq .Kind "home" }}
     <header class="blog-header">
       <div class="callout large">
         <div class="row column text-center">
@@ -43,8 +44,10 @@
         </div>
       </div>
     </header>
+    {{ end }}
 
     <main>
+      
       <div class="row" id="content">
         <div class="medium-8 columns">
           {{ block "main" . }}
@@ -53,6 +56,7 @@
         </div>
           {{ partial "sidebar.html" . }}
       </div>
+
     </main>
 
     {{ partial "site-footer.html" . }}
