--- a/source/scss/app.scss
+++ b/source/scss/app.scss
@@ -2,50 +2,132 @@
 
 @import 'settings';
 @import 'foundation';
-@import 'motion-ui';
 
-@include foundation-global-styles;
-@include foundation-grid;
+/// include all modules of foundation
+@include foundation-everything;
+
+//@import 'motion-ui';
+
+//@include foundation-global-styles;
+//@include foundation-grid;
 // @include foundation-flex-grid;
-@include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
+//@include foundation-typography;
+//@include foundation-button;
+//@include foundation-forms;
 // @include foundation-range-input;
-@include foundation-accordion;
-@include foundation-accordion-menu;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-card;
-@include foundation-close-button;
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-responsive-embed;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
-@include foundation-progress-bar;
+//@include foundation-accordion;
+//@include foundation-accordion-menu;
+//@include foundation-badge;
+//@include foundation-breadcrumbs;
+//@include foundation-button-group;
+//@include foundation-callout;
+//@include foundation-card;
+//@include foundation-close-button;
+//@include foundation-menu;
+//@include foundation-menu-icon;
+//@include foundation-drilldown-menu;
+//@include foundation-dropdown;
+//@include foundation-dropdown-menu;
+//@include foundation-responsive-embed;
+//@include foundation-label;
+//@include foundation-media-object;
+//@include foundation-off-canvas;
+//@include foundation-orbit;
+//@include foundation-pagination;
+//@include foundation-progress-bar;
 // @include foundation-progress-element;
 // @include foundation-meter-element;
-@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
-@include foundation-visibility-classes;
-@include foundation-float-classes;
+//@include foundation-slider;
+//@include foundation-sticky;
+//@include foundation-reveal;
+//@include foundation-switch;
+//@include foundation-table;
+//@include foundation-tabs;
+//@include foundation-thumbnail;
+//@include foundation-title-bar;
+//@include foundation-tooltip;
+//@include foundation-top-bar;
+//@include foundation-visibility-classes;
+//@include foundation-float-classes;
 // @include foundation-flex-classes;
 
-@include motion-ui-transitions;
-@include motion-ui-animations;
+//@include motion-ui-transitions;
+//@include motion-ui-animations;
+
+
+@import "sd-ui";
+
+/* TODO: Document removing foundation icons if not required */
+//@import 'foundation-icons.scss';
+/*
+
+.blog-post .card-section img {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #ddd;
+}
+
+footer {
+    //background: #ddd;
+    background: #2c3840;
+    padding: 24px 0 10px;
+}
+
+.home-social {
+    float: right;
+}
+
+.home-social li {
+    list-style: none;
+    float: left;
+    margin-left: 10px;
+}
+
+.home-social li i {
+    font-size: 50px;
+    line-height: 50px;
+}
+
+footer .site-logo {
+    color: #858585;
+    font-weight: normal;
+    padding: 23px 0 0 0 !important;
+    font-size: em-calc(16px);
+    display: inline-block;
+    width: 90px;
+}
+
+footer .site-links {
+    margin: 0;
+    display: inline-block;
+    padding-bottom: 0px;
+}
+
+footer .site-links li {
+    display: block;
+    float: left;
+    margin-left: 6px;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 0.75rem;
+}
+
+footer .site-links li:first-child {
+    margin: 0;
+}
+
+footer .site-links a {
+    color: #666;
+    padding: 3px 6px;
+}
+
+footer .site-links a:first-child {
+    padding: 3px 6px 3px 0;
+}
+
+footer .copyright {
+    margin: 6px 0 0;
+    font-size: 0.75rem;
+    color: #666;
+}
+*/
